--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-We are changing several things in the upcoming months, please direct support queries to:
+We are changing several things in the upcoming months.
+
+Please direct all queries to:
 
   workspace-dev@globus.org
 
