--- a/README
+++ b/README
@@ -1,4 +1,8 @@
-We are changing several things in the upcoming months.
+Nimbus - Open Source IaaS Cloud Computing Software
+
+  http://workspace.globus.org
+
+We are changing the repository around in the upcoming months.
 
 Please direct all queries to:
 
