Rolled cloud-client builder to v012. Updated changelog and readme. Added meta-cloud-client.sh and multi cloud properties directory. Added sample deploy.xml Added broker URL and identity fields to default cloud.properties

--- a/cloud-client/nimbus-cloud-client-src/CHANGES.txt
+++ b/cloud-client/nimbus-cloud-client-src/CHANGES.txt
@@ -1,3 +1,16 @@
+nimbus-cloud-client-012
+--------------------------
+
+[*] Fixed bug in argument handling for --broker-url and --broker-id (bug6732)
+
+[*] Added new meta-cloud-client that supports deploying a cluster across
+    multiple clouds.
+
+[*] Added properties for context broker URL and identity. These simplify
+    launching workspaces at one site while using a context broker at
+    another.
+
+
 workspace-cloud-client-011
 --------------------------
 
