nimbus-configure improvements.
* Add header to config file output
* Check for keystore mismatch with host cert/key
* Handle Ctrl-C more gracefully

--- a/bin/install
+++ b/bin/install
@@ -58,6 +58,8 @@ $CONFIG_SCRIPT
 if [ $? -ne 0 ]; then
     echo "Nimbus configuration script failed! You may try running it manually:"
     echo "    $CONFIG_SCRIPT"
+    echo "You can also run the script with debugging output:"
+    echo "    $CONFIG_SCRIPT --debug"
     exit 1
 fi
 
