--- a/bin/install
+++ b/bin/install
@@ -8,7 +8,8 @@ NIMBUS_SRC=`cd $NIMBUS_SRC_REL; pwd`
 if [ "X$1" == "X" ]; then
     echo ""
     echo "Usage: $0 destination_dir"
-    echo "    You must specify the destination directory.\n"
+    echo "    You must specify the destination directory."
+    echo ""
     exit 1
 fi
 
