--- a/bin/install
+++ b/bin/install
@@ -5,7 +5,7 @@ FORCE_FRESH_INSTALL="yes"
 NIMBUS_SRC_REL="`dirname $0`/.."
 NIMBUS_SRC=`cd $NIMBUS_SRC_REL; pwd`
 
-if [ "X$1" == "X" ]; then
+if [ "X$1" = "X" ]; then
     echo ""
     echo "Usage: $0 destination_dir"
     echo "    You must specify the destination directory."
@@ -16,7 +16,7 @@ fi
 NIMBUS_HOME=$1
 
 if [ -d $NIMBUS_HOME ] && [ "$(ls -A $NIMBUS_HOME)" ]; then
-    if [ $FORCE_FRESH_INSTALL == "yes" ]; then
+    if [ $FORCE_FRESH_INSTALL = "yes" ]; then
         echo ""
         echo "The destination directory '$NIMBUS_HOME' exists and is not empty."
         echo "It is not recommended to reinstall Nimbus into an existing install."
