--- a/bin/install
+++ b/bin/install
@@ -1,5 +1,7 @@
 #!/bin/bash
 
+PYTHON_EXE="/usr/bin/env python"
+
 FORCE_FRESH_INSTALL="yes"
 
 NIMBUS_SRC_REL="`dirname $0`/.."
@@ -33,6 +35,14 @@ if [ -d $NIMBUS_HOME ] && [ "$(ls -A $NIMBUS_HOME)" ]; then
         exit 1
     fi
 fi
+
+# returns 0 if Python 2.4+
+$PYTHON_EXE -c "import sys; sys.exit(sys.version_info < (2,4))"
+if [ $? -ne 0 ]; then
+    echo "ERROR: Your system must have Python version 2.4 or later."
+    exit 1
+fi
+
 
 $NIMBUS_SRC/bin/create-nimbus-home $NIMBUS_HOME
 
