--- a/bin/install
+++ b/bin/install
@@ -3,6 +3,7 @@
 PYTHON_EXE="/usr/bin/env python"
 
 FORCE_FRESH_INSTALL="yes"
+ALLOW_ROOT_INSTALL="no"
 
 NIMBUS_SRC_REL="`dirname $0`/.."
 NIMBUS_SRC=`cd $NIMBUS_SRC_REL; pwd`
@@ -11,6 +12,16 @@ if [ "X$1" = "X" ]; then
     echo ""
     echo "Usage: $0 destination_dir"
     echo "    You must specify the destination directory."
+    echo ""
+    exit 1
+fi
+
+if [ $ALLOW_ROOT_INSTALL = "no" ] && [ $EUID -eq 0 ]; then
+    echo ""
+    echo "It is not recommended to install Nimbus as root."
+    echo "If you insist, edit this script:"
+    echo "    $0"
+    echo "and change ALLOW_ROOT_INSTALL to \"yes\""
     echo ""
     exit 1
 fi
