--- a/bin/install
+++ b/bin/install
@@ -3,7 +3,6 @@
 PYTHON_EXE="/usr/bin/env python"
 
 FORCE_FRESH_INSTALL="yes"
-ALLOW_ROOT_INSTALL="no"
 
 NIMBUS_SRC_REL="`dirname $0`/.."
 NIMBUS_SRC=`cd $NIMBUS_SRC_REL; pwd`
@@ -16,12 +15,10 @@ if [ "X$1" = "X" ]; then
     exit 1
 fi
 
-if [ $ALLOW_ROOT_INSTALL = "no" ] && [ $EUID -eq 0 ]; then
+if [ "X$NIMBUS_ALLOW_ROOT_INSTALL" != "Xyes" ] && [ $EUID -eq 0 ]; then
     echo ""
-    echo "It is not recommended to install Nimbus as root."
-    echo "If you insist, edit this script:"
-    echo "    $0"
-    echo "and change ALLOW_ROOT_INSTALL to \"yes\""
+    echo "It is not recommended to install or run Nimbus as root."
+    echo "If you insist, set the NIMBUS_ALLOW_ROOT_INSTALL environment variable to \"yes\""
     echo ""
     exit 1
 fi
