Got things working with cumulus.conf instead of @TOKEN@ post-deploy mechanism.  Altered the installation/nimbus-configure logic a bit (in the process, added some new configure options).  Still more to validate but the installer works and services then launch without bailing.

--- a/bin/install
+++ b/bin/install
@@ -60,6 +60,13 @@ if [ $? -ne 0 ]; then
     exit 1
 fi
 
+CUMULUS_ENV="$NIMBUS_HOME/cumulus/env.sh"
+if [ ! -f $CUMULUS_ENV ]; then
+    echo "Expected file to be created: $CUMULUS_ENV"
+    exit 1
+fi
+
+
 echo "-----------------------------------------------------------------"
 echo " Configuring installed services"
 echo "-----------------------------------------------------------------"
@@ -82,6 +89,50 @@ if [ $? -ne 0 ]; then
     exit 1
 fi
 
+
+CUMULUS_REPO_BUCKET=`$CONFIG_SCRIPT --print-repobucket`
+if [ $? -ne 0 ]; then
+    echo "Could not determine Cumulus repository bucket."
+    exit 1
+fi
+
+CUMULUS_HOST=`$CONFIG_SCRIPT --print-hostname`
+if [ $? -ne 0 ]; then
+    echo "Could not determine chosen hostname."
+    exit 1
+fi
+
+echo ""
+echo "Creating Cumulus repository with the following commands:"
+echo ""
+
+REPOCMD1="$NIMBUS_HOME/bin/nimbusctl cumulus start"
+REPOCMD2="$NIMBUS_HOME/cumulus/bin/cumulus-create-repo-admin nimbusadmin@${CUMULUS_HOST} $CUMULUS_REPO_BUCKET"
+REPOCMD3="$NIMBUS_HOME/bin/nimbusctl cumulus stop"
+
+echo "    $REPOCMD1"
+echo "    $REPOCMD2"
+echo "    $REPOCMD3"
+echo ""
+
+$REPOCMD1
+if [ $? -ne 0 ]; then
+    echo "Could not start Cumulus."
+    exit 1
+fi
+
+$REPOCMD2
+if [ $? -ne 0 ]; then
+    echo "Could not create Cumulus repository."
+    exit 1
+fi
+
+$REPOCMD3
+if [ $? -ne 0 ]; then
+    echo "Could not stop Cumulus? (continuing)"
+fi
+
+echo ""
 echo ""
 echo "-----------------------------------------------------------------"
 echo " Nimbus installation succeeded!"
