nice stubs for the 'web' library

--- a/bin/install
+++ b/bin/install
@@ -1,8 +1,7 @@
 #!/bin/bash
 
-PYTHON_EXE="/usr/bin/env python"
-
 FORCE_FRESH_INSTALL="yes"
+NIMBUS_ALLOW_ROOT_INSTALL="no"
 
 NIMBUS_SRC_REL="`dirname $0`/.."
 NIMBUS_SRC=`cd $NIMBUS_SRC_REL; pwd`
@@ -44,6 +43,12 @@ if [ -d $NIMBUS_HOME ] && [ "$(ls -A $NIMBUS_HOME)" ]; then
     fi
 fi
 
+
+if [ ! -d $NIMBUS_HOME ]; then
+    mkdir $NIMBUS_HOME
+fi
+
+PYTHON_EXE="/usr/bin/env python"
 # returns 0 if Python 2.4+
 $PYTHON_EXE -c "import sys; sys.exit(sys.version_info < (2,4))"
 if [ $? -ne 0 ]; then
@@ -51,8 +56,8 @@ if [ $? -ne 0 ]; then
     exit 1
 fi
 
+$NIMBUS_SRC/bin/create-nimbus-home $NIMBUS_HOME 2>&1 | tee $NIMBUS_HOME/install.log
 
-$NIMBUS_SRC/bin/create-nimbus-home $NIMBUS_HOME
 
 if [ $? -ne 0 ]; then
     echo ""
@@ -65,7 +70,6 @@ if [ ! -f $CUMULUS_ENV ]; then
     echo "Expected file to be created: $CUMULUS_ENV"
     exit 1
 fi
-
 
 echo "-----------------------------------------------------------------"
 echo " Configuring installed services"
@@ -90,68 +94,4 @@ if [ $? -ne 0 ]; then
 fi
 
 
-CUMULUS_REPO_BUCKET=`$CONFIG_SCRIPT --print-repobucket`
-if [ $? -ne 0 ]; then
-    echo "Could not determine Cumulus repository bucket."
-    exit 1
-fi
-
-CUMULUS_HOST=`$CONFIG_SCRIPT --print-hostname`
-if [ $? -ne 0 ]; then
-    echo "Could not determine chosen hostname."
-    exit 1
-fi
-
-echo ""
-echo "Creating Cumulus repository with the following commands:"
-echo ""
-
-REPOCMD1="$NIMBUS_HOME/bin/nimbusctl cumulus start"
-REPOCMD2="$NIMBUS_HOME/cumulus/bin/cumulus-create-repo-admin nimbusadmin@${CUMULUS_HOST} $CUMULUS_REPO_BUCKET"
-REPOCMD3="$NIMBUS_HOME/bin/nimbusctl cumulus stop"
-
-echo "    $REPOCMD1"
-echo "    $REPOCMD2"
-echo "    $REPOCMD3"
-echo ""
-
-$REPOCMD1
-if [ $? -ne 0 ]; then
-    echo "Could not start Cumulus."
-    exit 1
-fi
-
-$REPOCMD2
-if [ $? -ne 0 ]; then
-    echo "Could not create Cumulus repository."
-    exit 1
-fi
-
-$REPOCMD3
-if [ $? -ne 0 ]; then
-    echo "Could not stop Cumulus? (continuing)"
-fi
-
-echo ""
-echo ""
-echo "-----------------------------------------------------------------"
-echo " Nimbus installation succeeded!"
-echo "-----------------------------------------------------------------"
-echo ""
-echo "However, additional configuration may be necessary:"
-echo ""
-echo "    To run the auto-configuration program, launch:"
-echo "        $NIMBUS_HOME/services/share/nimbus-autoconfig/autoconfig.sh"
-echo ""
-echo "    To run the cloud configuration admin helper, launch:"
-echo "        $NIMBUS_HOME/services/share/nimbus-autoconfig/cloud-admin.sh"
-echo ""
-
-echo "Refer to the Administrator Guide for details:"
-echo "    http://www.nimbusproject.org/docs/"
-echo ""
-echo "You can start/stop Nimbus services with the nimbusctl command. e.g:"
-echo "    $NIMBUS_HOME/bin/nimbusctl start"
-echo ""
-
-exit 0
+$NIMBUS_SRC/bin/install-real.sh  "${@}" 2>&1 | tee -a $NIMBUS_HOME/install.log
