--- a/bin/install
+++ b/bin/install
@@ -49,12 +49,23 @@ if [ ! -d $NIMBUS_HOME ]; then
 fi
 
 PYTHON_EXE="/usr/bin/env python"
-# returns 0 if Python 2.4+
-$PYTHON_EXE -c "import sys; sys.exit(sys.version_info < (2,4))"
+# returns 0 if Python 2.5+
+$PYTHON_EXE -c "import sys; sys.exit(sys.version_info < (2,5))"
 if [ $? -ne 0 ]; then
-    echo "ERROR: Your system must have Python version 2.4 or later."
+    echo "ERROR: Your system must have Python version 2.5 or later."
     exit 1
 fi
+
+echo "====================================="
+echo "Making the python virtual env"
+echo "====================================="
+pyve_path=$installdir/ve
+$PYTHON_EXE $source_dir/cumulus/virtualenv.py -p $PYTHON $pyve_path
+if [ $? -ne 0 ]; then
+    echo "ERROR: python virtualenv installation failed."
+    exit 1
+fi
+PYVE=$pyve/bin/python
 
 $NIMBUS_SRC/bin/create-nimbus-home $NIMBUS_HOME 2>&1 | tee $NIMBUS_HOME/install.log
 
