--- a/install
+++ b/install
@@ -2,6 +2,8 @@
 
 FORCE_FRESH_INSTALL="yes"
 
+START_DIR=`pwd`
+
 NIMBUS_SRC_REL="`dirname $0`"
 NIMBUS_SRC=`cd $NIMBUS_SRC_REL; pwd`
 
@@ -13,6 +15,12 @@ if [ "X$1" = "X" ]; then
     exit 1
 fi
 
+NIMBUS_REL_BASE_HOME="`dirname $1`"
+NIMBUS_BASE_HOME=`cd $NIMBUS_REL_BASE_HOME; pwd`
+NIMBUS_INST_DIR=`basename $1`
+NIMBUS_HOME="$NIMBUS_BASE_HOME/$NIMBUS_INST_DIR"
+echo "NIMBUS_HOME $NIMBUS_HOME"
+
 if [ "X$NIMBUS_ALLOW_ROOT_INSTALL" != "Xyes" ] && [ $EUID -eq 0 ]; then
     echo ""
     echo "It is not recommended to install or run Nimbus as root."
@@ -20,8 +28,6 @@ if [ "X$NIMBUS_ALLOW_ROOT_INSTALL" != "Xyes" ] && [ $EUID -eq 0 ]; then
     echo ""
     exit 1
 fi
-
-NIMBUS_HOME=$1
 
 if [ -d $NIMBUS_HOME ] && [ "$(ls -A $NIMBUS_HOME)" ]; then
     if [ $FORCE_FRESH_INSTALL = "yes" ]; then
