recreating work after the 'incident'

--- a/install
+++ b/install
@@ -145,9 +145,8 @@ if [ $rc -ne 0 ]; then
     exit $rc
 fi
 
-echo "installing lantorrent"
 export NIMBUS_HOME
-$NIMBUS_SRC/lantorrent/install.sh | tee -a $NIMBUS_HOME/install.log
+$NIMBUS_SRC/lantorrent/install.sh $NIMBUS_HOME/lantorrent | tee -a $NIMBUS_HOME/install.log
 rc=$PIPESTATUS
 if [ $rc -ne 0 ]; then
     echo "lantorrent install failed"
